# multi-agent-path-finding-continuous

./: .dockerignore  .gitignore  .gitmodules  .ycm_extra_conf.py  Dockerfile  Doxyfile  LICENSE  README.md  build_container.bash  train_in_container.bash
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
libtorch/: build-hash  build-version
libtorch/include/caffe2/core/: macros.h
ma_soft_actor_critic/: CMakeLists.txt  package.xml  setup.py
ma_soft_actor_critic/test/: test_masac.py
maac_agent/: CMakeLists.txt  package.xml
maac_agent/include/maac_agent/: actor.h  critic.h  network.h  types.h
maac_agent/src/: actor.cpp  critic.cpp  network.cpp
maac_agent/test/: test_maac.cpp
mapf_environment/: CMakeLists.txt  package.xml
mapf_environment/include/mapf_environment/: environment.h  environment_core.h  environment_wrapper.h  pathfinder.h  raycast_callback.h  types.h
mapf_environment/msg/: EnvStep.msg  Observation.msg
mapf_environment/src/: create_map.py  environment.cpp  environment_core.cpp  environment_wrapper.cpp  main.cpp  pathfinder.cpp  python_wrapper.cpp  raycast_callback.cpp  ros_wrapper_node.cpp  show_pic.py
mapf_environment/srv/: AddAgent.srv  RemoveAgent.srv
mapf_environment/test/: test_environment.cpp  test_environment_core.cpp  test_python_wrapper.py
mapf_environment_py/: CMakeLists.txt  package.xml
mapf_environment_py/src/: python_wrapper.cpp
mapf_environment_py/test/: test_python_wrapper.py
mapf_maddpg_agent/: CMakeLists.txt  package.xml
mapf_maddpg_agent/include/mapf_maddpg_agent/: actor.h  critic.h  network.h  types.h
mapf_maddpg_agent/launch/: launch_1_agents.launch
mapf_maddpg_agent/msg/: Experience.msg
mapf_maddpg_agent/src/: actor.cpp  critic.cpp  network.cpp
mapf_maddpg_agent/test/: test_maddpg.cpp
mapf_train_maac/: CMakeLists.txt  package.xml
mapf_train_maac/include/mapf_train_maac/: training_loop.h
mapf_train_maac/src/: run_training.cpp  training_loop.cpp
mapf_train_maac/test/: test_train.cpp
multi_agent_sac/: CMakeLists.txt  package.xml  setup.py
multi_agent_sac/params/: T_4x4.yaml  complex_6x6.yaml  empty_4x4.yaml  test.yaml  test1_2ag.yaml
multi_agent_sac/src/multi_agent_sac/: actor.py  algorithm.py  buffer.py  critic.py  env_wrapper.py  generate_plots.py  misc.py  network.py  test.py  training.py
multi_agent_sac/test/: test_masac.py
src/mapf_agents/: CMakeLists.txt  package.xml
src/mapf_agents/launch/: add_agent.launch
src/mapf_agents/scripts/: agent.py
src/mapf_agents/scripts/agents/: __init__.py  make_agent.py  user_agent.py
src/mapf_environment/: CMakeLists.txt  maps  package.xml
src/mapf_environment/include/mapf_environment/: environment.h  environment_core.h  raycast_callback.h
src/mapf_environment/launch/: environment.launch
src/mapf_environment/msg/: Observation.msg
src/mapf_environment/src/: .environment.cpp.swp  environment.cpp  environment_core.cpp  main.cpp  raycast_callback.cpp
src/mapf_environment/srv/: AddAgent.srv  CallAgent.srv
src/mapf_environment/test/: test_environment_core.cpp
src/multi_agent_path_finding/: Doxyfile
src/multi_agent_path_finding/doc/html/: actor_8h_source.html  annotated.html  classActor-members.html  classActor.html  classActorFixture-members.html  classActorFixture.html  classActorFixture__coll__graph.map  classActorFixture__coll__graph.md5  classActorFixture__inherit__graph.map  classActorFixture__inherit__graph.md5  classCritic-members.html  classCritic.html  classEnvironment-members.html  classEnvironment.html  classEnvironmentFixture-members.html  classEnvironmentFixture.html  classEnvironmentFixture__coll__graph.map  classEnvironmentFixture__coll__graph.md5  classEnvironmentFixture__inherit__graph.map  classEnvironmentFixture__inherit__graph.md5  classRayCastClosestCallback-members.html  classRayCastClosestCallback.html  classRayCastClosestCallback__inherit__graph.map  classRayCastClosestCallback__inherit__graph.md5  classRosEnvironment-members.html  classRosEnvironment.html  classagent_1_1Agent-members.html  classagent_1_1Agent.html  classcritic_1_1Critic-members.html  classcritic_1_1Critic.html  classes.html  critic_8h_source.html  dir_1b4a63a12f738d2db0afce8f0769b082.html  dir_24badd76ad612c9e778384956ff0c08b.html  dir_26cf42f244c1e550f4ac35165533a866.html  dir_2a44fda2ad984d4864456c175ae4b70a.html  dir_5631e9b8d2ddf3e546625eb7ff99c299.html  dir_584112cae23b7c9aedec783a6c85fbb6.html  dir_7f91d8ddcd881971a922283cb42feb8a.html  dir_92286792193e2599b346426875cde33a.html  (+30 more)
src/multi_agent_path_finding/doc/latex/: annotated.tex  classActor.tex  classActorFixture.tex  classActorFixture__coll__graph.md5  classActorFixture__inherit__graph.md5  classCritic.tex  classEnvironment.tex  classEnvironmentFixture.tex  classEnvironmentFixture__coll__graph.md5  classEnvironmentFixture__inherit__graph.md5  classRayCastClosestCallback.tex  classRayCastClosestCallback__coll__graph.md5  classRosEnvironment.tex  classagent_1_1Agent.tex  classcritic_1_1Critic.tex  dir_1b4a63a12f738d2db0afce8f0769b082.tex  dir_24badd76ad612c9e778384956ff0c08b.tex  dir_26cf42f244c1e550f4ac35165533a866.tex  dir_2a44fda2ad984d4864456c175ae4b70a.tex  index.tex  (+9 more)
src/multi_agent_path_finding/mapf_environment/: CMakeLists.txt  settings.ini
src/multi_agent_path_finding/mapf_maddpg_agent/: CMakeLists.txt  package.xml
src/multi_agent_path_finding/mapf_maddpg_agent/include/mapf_maddpg_agent/: actor.h  critic.h  types.h
src/multi_agent_path_finding/mapf_maddpg_agent/launch/: env_with_maddpg_agents.launch  launch_2_agents.launch
src/multi_agent_path_finding/mapf_maddpg_agent/msg/: Experience.msg  ExtendedState.msg  Value.msg
src/multi_agent_path_finding/mapf_maddpg_agent/scripts/: agent.py  critic.py  spawn_agents.py
src/multi_agent_path_finding/mapf_maddpg_agent/src/: actor.cpp  critic.cpp  maddpg.cpp
src/multi_agent_path_finding/mapf_maddpg_agent/test/: test_actor.cpp  test_maddpg.cpp
src/multiagent_description/: CMakeLists.txt  package.xml
src/multiagent_gazebo/: CMakeLists.txt  package.xml
src/multiagent_training/: CMakeLists.txt  package.xml
(+29 files in other folders)
