<?xml version="1.0"?>
<package format="2">
  <name>ma_soft_actor_critic</name>
  <version>0.0.0</version>
  <description>The ma_soft_actor_critic package</description>

  <maintainer email="vince@todo.todo">vince</maintainer>
  <license>TODO</license>

  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
