<?xml version="1.0"?>
<package format="2">
  <name>mapf_environment</name>
  <version>0.0.0</version>
  <description>The mapf_environment package</description>

  <maintainer email="vince@todo.todo">vince</maintainer>
  <license>TODO</license>

  <doc_depend>doxygen</doc_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>pybind11_catkin</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
  </export>
</package>
