<?xml version="1.0"?>
<package format="2">
  <name>mapf_environment_py</name>
  <version>0.0.0</version>
  <description>The mapf_environment_py package</description>

  <maintainer email="redvinaa@gmail.com">vince</maintainer>
  <license>MIT</license>

  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rosunit</test_depend>
  <depend>pybind11_catkin</depend>
  <depend>mapf_environment</depend>

  <export>
  </export>
</package>
