<?xml version="1.0"?>
<package format="2">
  <name>multi_agent_sac</name>
  <version>0.0.0</version>
  <description>The multi_agent_sac package</description>

  <maintainer email="redvinaa@gmail.com">vince</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
